--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background: #fff;
-    width: 450px;
+    width: 70vw;
     height: 60px;
     border-radius: 10px;
 }
@@ -80,7 +80,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background: #fff;
-    width: 450px;
+    width: 70vw;
     height: 60px;
     border-radius: 10px;
     margin-top: 10px;
@@ -96,11 +96,11 @@ body {
 }
 
 .add-resource input:nth-child(1) {
-    width: 60%;
+    width: 50vw;
 }
 
 .add-resource input:nth-child(2) {
-    width: 65px;
+    width: 10vw;
 }
 
 .transactions-recents {
@@ -121,9 +121,14 @@ body {
 }
 
 .transactions-recents .recents p {
+    display: none;
     font-size: 10pt;
     text-align: center;
     padding: 10px 0;
+}
+
+.transactions-recents .recents p.active {
+    display: block;
 }
 
 .transactions-recents .recents .resource {
